# ragchatbot

./: CLAUDE.md  package-lock.json  pyproject.toml  run.sh
.claude/commands/: add-and-commit.md
backend/: ai_generator.py  debug_query.py  search_tools.py  test_anthropic.py  test_full_flow.py
backend/tests/: conftest.py  pytest.ini  test_ai_generator.py  test_api.py  test_course_search_tool.py  test_data_integrity.py  test_rag_system.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: format-fix.sh  format.sh
